[package]
name = "E_commerce_Backned_actix-web-POSTGRESSQL"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
